Bug 861085 - Enable/Disable Bluetooth based on mozSettings value at startup, r=gyeh, r=qdot